--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@ apply plugin: "java"
 apply plugin: "application"
 apply plugin: "eclipse"
 
+sourceCompatibility = '1.7'
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+	testCompile 'junit:junit:4.11'	
 }
 
 task wrapper(type: Wrapper) {
