--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "java"
+apply plugin: "groovy"
 apply plugin: "application"
 apply plugin: "eclipse"
 
@@ -10,7 +11,9 @@ repositories {
 
 dependencies {
 	compile 'com.google.guava:guava:18.0'
-	testCompile 'junit:junit:4.11'	
+	testCompile 'junit:junit:4.11',
+				'org.codehaus.groovy:groovy:2.3.6',
+				'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
 task wrapper(type: Wrapper) {
